--- a/todo/todos.css
+++ b/todo/todos.css
@@ -41,14 +41,14 @@ html {
 
 #todoapp {
   width: 480px;
-  margin: 0.9px auto 40px;
-  background: rgba(255, 255, 255, 0.9);
+  margin: 0 auto 40px;
+  background: white;
   padding: 20px;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
-  
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
   -o-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
-  box-shadow: inset hsla(0, 0%, 30%, 0.8) 5px 5px 6px 0;
-border-radius: 10px / 54px;}
+  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
+}
   #todoapp h1 {
     font-size: 36px;
     font-weight: bold;
@@ -218,7 +218,7 @@ border-radius: 10px / 54px;}
 
 
 /*
- *  FranÃ§ois 'cahnory' Germain
+ *  François 'cahnory' Germain
  */
 .ui-tooltip, .ui-tooltip-top, .ui-tooltip-right, .ui-tooltip-bottom, .ui-tooltip-left {
   color:#ffffff;
@@ -317,24 +317,9 @@ border-radius: 10px / 54px;}
 /* TODO(M2): Make wicked animations */
 
 #todo-list li {
-  -webkit-transition: all 1s linear;
+  -webkit-transition: all 0.001s linear;
 }
 
 #todo-list li.removing {
-  -webkit-transform: scale(0.3) rotate(180deg);
-
+  -webkit-transform: scale(1);
 }
-
-body {
-
-background:
-  -webkit-radial-gradient(black 15%, transparent 16%) 0 0,
-  -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px,
-  -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-  -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-background-color: hsl(0, 52%, 69%);
-background-size:16px 16px;
-
-}
-
-
